[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arxiv-cli"
version = "0.1.0"
description = "A CLI for searching and retrieving arXiv papers — full-text search, metadata, citations, and research intelligence"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "baba20o", email = "baba200@greenmountaincomputing.com"}
]
keywords = ["arxiv", "papers", "research", "search", "cli", "academic"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
]
dependencies = [
    "requests>=2.28.0",
    "click>=8.0.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/baba20o/arxiv-cli"
Repository = "https://github.com/baba20o/arxiv-cli"
Issues = "https://github.com/baba20o/arxiv-cli/issues"

[project.scripts]
arxiv = "arxiv.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["arxiv*"]
